--- a/flask-twilio-video-master~/flask-twilio-video-master/templates/index.html
+++ b/flask-twilio-video-master~/flask-twilio-video-master/templates/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Flask & Twilio Video Conference</h1>
-        <form method="POST">
+        <form>
             <label for="username">Name: </label>
             <input type="text" name=”username” id="username">
             <label for="room">Room: </label>
