--- a/flask-twilio-video-master~/flask-twilio-video-master/templates/index.html
+++ b/flask-twilio-video-master~/flask-twilio-video-master/templates/index.html
@@ -7,9 +7,9 @@
         <h1>Flask & Twilio Video Conference</h1>
         <form>
             <label for="username">Name: </label>
-            <input type="text" name=”username” id="username">
+            <input type="text" name="username" id="username">
             <label for="room">Room: </label>
-            <input type="text" name=”room” id="room">
+            <input type="text" name="room" id="room">
             <button id="join_leave">Join call</button>
             <button id="share_screen" disabled>Share screen</button>
             <button id="toggle_chat" disabled>Toggle chat</button>
